--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Upright');
 body {
     max-width: 980px;
     margin: auto;
@@ -19,6 +20,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin-top: 2%;
+    margin-bottom: 1%;
 }
 
 .menu a {
@@ -35,31 +38,35 @@ body {
 .intro {
     display: flex;
     justify-content: center;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.2rem;
 }
 
 .intro_head {
     display: flex;
     justify-content: center;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.7rem;
 }
 
 #gen_pic {
-    max-width: 50%;
+    width: 50%;
     float: left;
+    padding-right: 2%;
 }
 
 .intro_p {
     padding-left: 2%;
     padding-right: 2%;
-}
-
-.intro_text {
-    margin-top: 1px;
-    padding-left: 52%;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.2rem;
 }
 
 .lesson_head {
     display: flex;
     justify-content: center;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.7rem;
 }
 
 .lesson_list {
@@ -78,6 +85,7 @@ body {
 
 .button_lesson {
     width: 100%;
+    padding: 2%;
     background-color: orange;
     border: none;
     color: white;
@@ -98,33 +106,27 @@ body {
 .link_head {
     display: flex;
     justify-content: center;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.5rem;
 }
 
 .link_pics {
-    display: flex;
-    justify-content: space-around;
-    width: 30%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
-.link_pics #facebook {
-    align-items: center;
-    max-height: 70px;
-    max-width: 70px;
-}
-
-.link_pics #instagram {
-    max-height: 70px;
-    max-width: 70px;
-}
-
-.link_pics #youtube {
-    max-height: 70px;
-    max-width: 70px;
+.link_pic #facebook,
+.link_pic #instagram,
+.link_pic #youtube {
+    max-width: 20%;
+    padding-left: 40%;
 }
 
 .contact_head {
     display: flex;
     justify-content: center;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.7rem;
 }
 
 .contact {
@@ -133,25 +135,11 @@ body {
     grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 2%;
     padding: 2%;
-    content-gap: 0;
-}
-
-.contact .contact_name {
-    order: 2;
-}
-
-.contact .contact_email {
-    order: 3;
 }
 
 .contact .contact_message {
     grid-column: 1;
     grid-row: 1 / 4;
-    order: 1;
-}
-
-.contact .submit {
-    order: 4;
 }
 
 .contact #contact_message {
@@ -169,9 +157,40 @@ body {
 
 .contact #submit {
     width: 100%;
+    background-color: orange;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
 }
 
-@media (max-width: 600px) {
+footer {
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 700px) {
+    .link_pic #facebook,
+    .link_pic #instagram,
+    .link_pic #youtube {
+        max-width: 30%;
+        padding-left: 35%;
+    }
+}
+
+@media (max-width: 400px) {
+
+    .main_header {
+        order: -1;
+    }
+    .main_header #main_header_pic {
+        width: 100%;
+    }
+
+    .intro_p #gen_pic {
+        width: 100%;
+    }
 
     .lesson_list {
         grid-template-columns: 1fr;
@@ -190,5 +209,15 @@ body {
     }
     .link {
         padding: 3%
+    }
+    .contact {
+        display: grid;
+        grid-template-rows: 3fr repeat(3, 1fr);
+    }
+    .link_pic #facebook,
+    .link_pic #instagram,
+    .link_pic #youtube {
+        max-width: 50%;
+        padding-left: 25%;
     }
 }
