--- a/css/index.css
+++ b/css/index.css
@@ -10,10 +10,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.main_header #main_header_pic {
-    width: 70%;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.2rem;
+    color: white;
+    background-color: grey;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 .menu {
@@ -28,7 +30,8 @@ body {
     text-decoration: none;
     color: black;
     text-transform: uppercase;
-    font-family: sans-serif;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.2rem;
 }
 
 .menu a:hover {
@@ -95,6 +98,8 @@ body {
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     cursor: pointer;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.2rem;
 }
 
 .button_lesson:hover {
@@ -145,14 +150,20 @@ body {
 .contact #contact_message {
     width: 100%;
     height: 93%;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.1rem;
 }
 
 .contact #contact_name {
     width: 100%;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.1rem;
 }
 
 .contact #contact_email {
     width: 100%;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.1rem;
 }
 
 .contact #submit {
@@ -162,6 +173,8 @@ body {
     color: white;
     text-align: center;
     text-decoration: none;
+    font-family: 'Cormorant Upright', serif;
+    font-size: 1.2rem;
 }
 
 footer {
@@ -176,6 +189,12 @@ footer {
     .link_pic #youtube {
         max-width: 30%;
         padding-left: 35%;
+    }
+}
+
+@media (max-width: 460px) {
+    .main_header {
+        font-size: 1rem;
     }
 }
 
