--- a/css/index.css
+++ b/css/index.css
@@ -89,7 +89,7 @@ body {
 .button_lesson {
     width: 100%;
     padding: 2%;
-    background-color: orange;
+    background-color: grey;
     border: none;
     color: white;
     text-align: center;
@@ -104,7 +104,7 @@ body {
 
 .button_lesson:hover {
     background-color: white;
-    border: 2px solid orange;
+    border: 2px solid grey;
     color: black;
 }
 
@@ -168,7 +168,7 @@ body {
 
 .contact #submit {
     width: 100%;
-    background-color: orange;
+    background-color: grey;
     border: none;
     color: white;
     text-align: center;
